# rust_minimal_of_mine

./: .gitignore  Cargo.toml  LICENSE  README.md
char_occurence/: Cargo.toml  README.md
char_occurence/src/: main.rs  superscript.rs
