[package]
name = "char_occurence"
description = "CLI that displays the occurences of character in the argument string as superscript."
version = "0.2.1"
license = {workspace = true}
edition = {workspace = true}
repository = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = {workspace = true}